--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+hr{
+  border:  1px solid #CDCDCD
+}
+a{
+    font-size: 20px;
+    text-decoration: none;
+}
