--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,21 @@
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: #16213E;
+}
+ul a{
+  text-decoration: none;
+  cursor: pointer;
+}
+span{
+  color: #E94560;
 }
 hr{
   border:  1px solid #CDCDCD
 }
-a{
-    font-size: 20px;
-    text-decoration: none;
+#nav-item{
+   text-decoration: none;
+}
+.brand{
+  color: #533483;
+  
 }
