--- a/styles/style.css
+++ b/styles/style.css
@@ -32,3 +32,12 @@ hr{
   -webkit-box-orient: vertical;
   white-space: normal;
 }
+@media screen and (max-width:992px) {
+  .category{
+    display: flex;
+    justify-content: center;
+  }
+  img.img-fluid{
+    width:100%
+  }
+}
